--- a/styles/sendform.css
+++ b/styles/sendform.css
@@ -7,11 +7,11 @@
 	position: relative;
 }
 
-.sendform_title {
+.title_wrapper {
 	padding-top: 60px;
 }
 
-.sendform_title p {
+.sendform_title {
 	width: 40%;
 	margin: auto;
 	text-align: center;
@@ -21,7 +21,7 @@
 	position: relative;
 }
 
-.sendform_title p::before {
+.sendform_title::before {
 	width: 70%;
 	position: absolute;
 	height: 10px;
@@ -33,7 +33,7 @@
 	content: "";
 }
 
-.sendform_title p::after {
+.sendform_title::after {
 	width: 70%;
 	position: absolute;
 	height: 10px;
@@ -113,6 +113,7 @@
 	font-family: Candara;
 	font-size: 1em;
 	text-align: center;
+	cursor: pointer;
 }
 
 .check_basket {
@@ -153,7 +154,7 @@
 }
 
 @media (max-width: 1200px) {
-	.sendform_title p {
+	.sendform_title {
 		font-size: 1.6em;
 	}
 
@@ -167,15 +168,15 @@
 		height: 650px;
 	}
 
-	.sendform_title p {
+	.sendform_title {
 		font-size: 1.2em;
 	}
 
-	.sendform_title p::before {
+	.sendform_title::before {
 		height: 7px;
 	}
 
-	.sendform_title p::after {
+	.sendform_title::after {
 		height: 7px;
 	}
 
@@ -198,19 +199,19 @@
 		height: 450px;
 	}
 
-	.sendform_title {
+	.title_wrapper {
 		padding-top: 30px;
 	}
 	
-	.sendform_title p {
+	.sendform_title {
 		font-size: 1em;
 	}
 
-	.sendform_title p::before {
+	.sendform_title::before {
 		height: 6px;
 	}
 
-	.sendform_title p::after {
+	.sendform_title::after {
 		height: 6px;
 	}
 
@@ -251,16 +252,16 @@
 		height: 470px;
 	}
 	
-	.sendform_title p {
+	.sendform_title {
 		font-size: .7em;
 	}
 
-	.sendform_title p::before {
+	.sendform_title::before {
 		height: 6px;
 		width: 60%;
 	}
 
-	.sendform_title p::after {
+	.sendform_title::after {
 		height: 6px;
 		width: 60%;
 	}
@@ -302,18 +303,18 @@
 }
 
 @media (max-width: 440px) {	
-	.sendform_title p {
+	.sendform_title {
 		font-size: .7em;
 		width: 65%;
 	}
 
-	.sendform_title p::before {
+	.sendform_title::before {
 		height: 4px;
 		width: 60%;
 		left: -60%;
 	}
 
-	.sendform_title p::after {
+	.sendform_title::after {
 		height: 4px;
 		width: 60%;
 		right: -60%;
